Adding the final mixture consistency layer for proper evaluation

--- a/sudo_rm_rf/notebooks/sudormrf_how_to_use.ipynb
+++ b/sudo_rm_rf/notebooks/sudormrf_how_to_use.ipynb
@@ -144,6 +144,11 @@
     "# Apply the model\n",
     "rec_sources_wavs = anechoic_separation_model(input_mix.unsqueeze(1))\n",
     "\n",
+    "# # In case you are using the pre-trained models with Group communication\n",
+    "# # please also use the mixture consistency right after the estimated waveforms\n",
+    "# import sudo_rm_rf.dnn.experiments.utils.mixture_consistency as mixture_consistency\n",
+    "# rec_sources_wavs = mixture_consistency.apply(rec_sources_wavs, input_mix.unsqueeze(1))\n",
+    "\n",
     "# Rescale the input sources with the mixture mean and variance\n",
     "rec_sources_wavs = (rec_sources_wavs * input_mix_std) + input_mix_mean\n",
     "# It is that simple!"
@@ -372,6 +377,11 @@
     "\n",
     "# Apply the model\n",
     "rec_sources_wavs = noisy_and_reverberant_separation_model(input_mix.unsqueeze(1))\n",
+    "\n",
+    "# # In case you are using the pre-trained models with Group communication\n",
+    "# # please also use the mixture consistency right after the estimated waveforms\n",
+    "# import sudo_rm_rf.dnn.experiments.utils.mixture_consistency as mixture_consistency\n",
+    "# rec_sources_wavs = mixture_consistency.apply(rec_sources_wavs, input_mix.unsqueeze(1))\n",
     "\n",
     "# Rescale the input sources with the mixture mean and variance\n",
     "rec_sources_wavs = (rec_sources_wavs * input_mix_std) + input_mix_mean"
