Bugfixes fro notebooks computign separation and computation metrics

--- a/sudo_rm_rf/notebooks/sudormrf_extract_computation_metrics_example.ipynb
+++ b/sudo_rm_rf/notebooks/sudormrf_extract_computation_metrics_example.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "complex-manner",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,6 @@
     "Elapsed Time Forward DEV: cpu BS: 6, 6.017881846427917 sec, Peak GPU usage 0.246493696 GB\n",
     "Elapsed Time Forward DEV: gpu BS: 6, 0.07618927955627441 sec, Peak GPU usage 0.362899968 GB\n",
     "\n",
-    "Evaluating model: GroupCom_Sudormrf_U8_Bases512_WSJ02mix.pt\n",
     "Trainable Parameters (millions): 0.507\n",
     "Elapsed Time Backward DEV: gpu BS: 1, 0.12531145811080932 sec, Peak GPU usage 1.451049472 GB\n",
     "Trainable Parameters (millions): 0.507\n",
@@ -288,7 +287,6 @@
     "Elapsed Time Forward DEV: cpu BS: 4, 4.936136507987976 sec, Peak GPU usage 0.1330816 GB\n",
     "Elapsed Time Forward DEV: gpu BS: 4, 0.07500633001327514 sec, Peak GPU usage 0.254468608 GB\n",
     "\n",
-    "Evaluating model: Improved_Sudormrf_U16_Bases512_WSJ02mix.pt\n",
     "Trainable Parameters (millions): 5.016\n",
     "Elapsed Time Backward DEV: gpu BS: 1, 0.18350332975387573 sec, Peak GPU usage 2.099536384 GB\n",
     "Trainable Parameters (millions): 5.016\n",
@@ -306,7 +304,6 @@
     "Elapsed Time Forward DEV: cpu BS: 4, 5.887118864059448 sec, Peak GPU usage 0.288383488 GB\n",
     "Elapsed Time Forward DEV: gpu BS: 4, 0.0821913480758667 sec, Peak GPU usage 0.551295488 GB\n",
     "\n",
-    "Evaluating model: Improved_Sudormrf_U16_Bases2048_WHAMRexclmark.pt\n",
     "Trainable Parameters (millions): 6.363\n",
     "Elapsed Time Backward DEV: gpu BS: 1, 0.18807061910629272 sec, Peak GPU usage 2.443395584 GB\n",
     "Trainable Parameters (millions): 6.363\n",
@@ -342,8 +339,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "id": "remarkable-textbook",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=========\n",
+      " GroupCom_Sudormrf_U8_Bases512_WSJ02mix.pt\n",
+      "{'Params': '0.51',\n",
+      " 'exsec cpu for': '1.5 <br> 0.3',\n",
+      " 'exsec gpu back': '31.9 <br> 18.1',\n",
+      " 'exsec gpu for': '43.9 <br> 78.9',\n",
+      " 'mem gpu back': '1.45 <br> 5.94',\n",
+      " 'mem gpu for': '0.06 <br> 0.25',\n",
+      " 'time cpu for': '0.66 <br> 3.55',\n",
+      " 'time gpu back': '0.13 <br> 0.22',\n",
+      " 'time gpu for': '0.02 <br> 0.05'}\n",
+      "1.5 <br> 0.3 | 43.9 <br> 78.9 | 0.06 <br> 0.25 | 31.9 <br> 18.1 | 1.45 <br> 5.94 | 0.51\n",
+      "=========\n",
+      " Improved_Sudormrf_U16_Bases512_WSJ02mix.pt\n",
+      "{'Params': '5.02',\n",
+      " 'exsec cpu for': '3.9 <br> 0.2',\n",
+      " 'exsec gpu back': '21.8 <br> 11.8',\n",
+      " 'exsec gpu for': '26.2 <br> 53.3',\n",
+      " 'mem gpu back': '2.1 <br> 8.43',\n",
+      " 'mem gpu for': '0.08 <br> 0.25',\n",
+      " 'time cpu for': '1.04 <br> 4.94',\n",
+      " 'time gpu back': '0.18 <br> 0.34',\n",
+      " 'time gpu for': '0.04 <br> 0.08'}\n",
+      "3.9 <br> 0.2 | 26.2 <br> 53.3 | 0.08 <br> 0.25 | 21.8 <br> 11.8 | 2.1 <br> 8.43 | 5.02\n",
+      "=========\n",
+      " Improved_Sudormrf_U16_Bases2048_WHAMRexclmark.pt\n",
+      "{'Params': '6.36',\n",
+      " 'exsec cpu for': '3.3 <br> 0.2',\n",
+      " 'exsec gpu back': '21.3 <br> 11.2',\n",
+      " 'exsec gpu for': '26.2 <br> 48.7',\n",
+      " 'mem gpu back': '2.44 <br> 9.7',\n",
+      " 'mem gpu for': '0.16 <br> 0.55',\n",
+      " 'time cpu for': '1.22 <br> 5.89',\n",
+      " 'time gpu back': '0.19 <br> 0.36',\n",
+      " 'time gpu for': '0.04 <br> 0.08'}\n",
+      "3.3 <br> 0.2 | 26.2 <br> 48.7 | 0.16 <br> 0.55 | 21.3 <br> 11.2 | 2.44 <br> 9.7 | 6.36\n",
+      "=========\n",
+      " Improved_Sudormrf_U36_Bases2048_WSJ02mix.pt\n",
+      "{'Params': '23.24',\n",
+      " 'exsec cpu for': '1.3',\n",
+      " 'exsec gpu back': '2.2',\n",
+      " 'exsec gpu for': '9.8',\n",
+      " 'mem gpu back': '5.26',\n",
+      " 'mem gpu for': '0.23',\n",
+      " 'time cpu for': '3.14',\n",
+      " 'time gpu back': '0.46',\n",
+      " 'time gpu for': '0.1'}\n",
+      "1.3 | 9.8 | 0.23 | 2.2 | 5.26 | 23.24\n",
+      "=========\n",
+      " Improved_Sudormrf_U36_Bases4096_WHAMRexclmark.pt\n",
+      "{'Params': '26.61',\n",
+      " 'exsec cpu for': '0.3',\n",
+      " 'exsec gpu back': '2.2',\n",
+      " 'exsec gpu for': '10.1',\n",
+      " 'mem gpu back': '5.73',\n",
+      " 'mem gpu for': '0.37',\n",
+      " 'time cpu for': '3.71',\n",
+      " 'time gpu back': '0.45',\n",
+      " 'time gpu for': '0.1'}\n",
+      "0.3 | 10.1 | 0.37 | 2.2 | 5.73 | 26.61\n",
+      "=========\n",
+      " Sepformer\n",
+      "{'Params': '25.68',\n",
+      " 'exsec cpu for': '0.1',\n",
+      " 'exsec gpu back': '3.5',\n",
+      " 'exsec gpu for': '10.6',\n",
+      " 'mem gpu back': '8.16',\n",
+      " 'mem gpu for': '0.39',\n",
+      " 'time cpu for': '9.05',\n",
+      " 'time gpu back': '0.28',\n",
+      " 'time gpu for': '0.09'}\n",
+      "0.1 | 10.6 | 0.39 | 3.5 | 8.16 | 25.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "# PArse the results\n",
+    "from pprint import pprint\n",
+    "\n",
+    "comp_res_dic = {}\n",
+    "for model_res in computation_metrics_results.split(\"======================\"):\n",
+    "    this_model = None\n",
+    "    for l in model_res.split(\"\\n\"):\n",
+    "        if l.startswith(\"Evaluating\"):\n",
+    "            comp_res_dic[l.split(\" \")[-1]] = {}\n",
+    "            this_model = l.split(\" \")[-1]\n",
+    "            continue\n",
+    "        if l.startswith(\"Trainable\"):\n",
+    "            comp_res_dic[this_model][\"Params\"] = str(round(float(l.split(\" \")[-1]), 2))\n",
+    "        else:\n",
+    "            if \"BS: 2\" in l or \"BS: 6\" in l:\n",
+    "                continue\n",
+    "            \n",
+    "            info = l.split(\" \")\n",
+    "            if \"Backward\" in l:\n",
+    "                if \"mem gpu back\" not in comp_res_dic[this_model]:\n",
+    "                    comp_res_dic[this_model][\"mem gpu back\"] = str(round(float(info[-2]), 2))\n",
+    "                else:\n",
+    "                    comp_res_dic[this_model][\"mem gpu back\"] += f\" <br> {round(float(info[-2]), 2)}\"\n",
+    "                if \"time gpu back\" not in comp_res_dic[this_model]:\n",
+    "                    comp_res_dic[this_model][\"time gpu back\"] = str(round(float(info[-7]), 2))\n",
+    "                else:\n",
+    "                    comp_res_dic[this_model][\"time gpu back\"] += f\" <br> {round(float(info[-7]), 2)}\"\n",
+    "                if \"exsec gpu back\" not in comp_res_dic[this_model]:\n",
+    "                    comp_res_dic[this_model][\"exsec gpu back\"] = str(round(this_bs / float(info[-7]), 1))\n",
+    "                else:\n",
+    "                    comp_res_dic[this_model][\"exsec gpu back\"] += f\" <br> {round(this_bs / float(info[-7]), 1)}\"\n",
+    "            elif \"Forward DEV: gpu\" in l:\n",
+    "                this_bs = int(info[-8][0])\n",
+    "                if \"mem gpu for\" not in comp_res_dic[this_model]:\n",
+    "                    comp_res_dic[this_model][\"mem gpu for\"] = str(round(float(info[-2]), 2))\n",
+    "                else:\n",
+    "                    comp_res_dic[this_model][\"mem gpu for\"] += f\" <br> {round(float(info[-2]), 2)}\"\n",
+    "                if \"time gpu for\" not in comp_res_dic[this_model]:\n",
+    "                    comp_res_dic[this_model][\"time gpu for\"] = str(round(float(info[-7]), 2))\n",
+    "                else:\n",
+    "                    comp_res_dic[this_model][\"time gpu for\"] += f\" <br> {round(float(info[-7]), 2)}\"\n",
+    "                if \"exsec gpu for\" not in comp_res_dic[this_model]:\n",
+    "                    comp_res_dic[this_model][\"exsec gpu for\"] = str(round(this_bs / float(info[-7]), 1))\n",
+    "                else:\n",
+    "                    comp_res_dic[this_model][\"exsec gpu for\"] += f\" <br> {round(this_bs / float(info[-7]), 1)}\"\n",
+    "\n",
+    "            elif \"Forward DEV: cpu\" in l:\n",
+    "                if \"time cpu for\" not in comp_res_dic[this_model]:\n",
+    "                    comp_res_dic[this_model][\"time cpu for\"] = str(round(float(info[-7]), 2))\n",
+    "                else:\n",
+    "                    comp_res_dic[this_model][\"time cpu for\"] += f\" <br> {round(float(info[-7]), 2)}\"\n",
+    "                if \"exsec cpu for\" not in comp_res_dic[this_model]:\n",
+    "                    comp_res_dic[this_model][\"exsec cpu for\"] = str(round(this_bs / float(info[-7]), 1))\n",
+    "                else:\n",
+    "                    comp_res_dic[this_model][\"exsec cpu for\"] += f\" <br> {round(this_bs / float(info[-7]), 1)}\"\n",
+    "            print\n",
+    "for m in comp_res_dic:\n",
+    "    print(\"=========\\n\", m)\n",
+    "    pprint(comp_res_dic[m])\n",
+    "    acc = []\n",
+    "    for metric in ['exsec cpu for', \n",
+    "                   'exsec gpu for', 'mem gpu for', \n",
+    "                   'exsec gpu back', 'mem gpu back', 'Params']:\n",
+    "        acc.append(comp_res_dic[m][metric])\n",
+    "\n",
+    "#     print(acc)\n",
+    "    print(\" | \".join(acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "valid-essay",
+   "id": "ready-malawi",
    "metadata": {},
    "outputs": [],
    "source": []
